--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="uft-8">
         <title>Animals Zoo</title>
         <link href="lion.png" rel="shortcut icon">
+        <link rel="stylesheet" type="text/css" href="style.css"
     </head>
     <body>
     <h1>Animals Zoo</h1>
