--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
     <h1>Animals Zoo</h1>
+<div id="box">
+    <div id="relatorio-zoo">
     <p><strong>Relatório do Zoológico</strong><br>
     O Animals Zoo possui, ao todo, 17 animais, sendo:<br>
     Cinco ursos, sendo 1 fêmea e 4 machos <br>
@@ -16,13 +18,16 @@
     Três pinguins, sendo 2 fêmeas e 1 macho<br>
     Dois sapos, sendo 1 fêmea e 1 macho<br>
     </p>
-
+    </div>
+    <div id="outras-infos">
     <p><strong>Lorem ipsum dolor sit amet</strong><br>
     Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    </div>
+</div>
 
     <h3>Imagens do Zoológico</h3>
     <img src="mapa-zoo.jpeg" alt="Mapa do zoológico Animals Zoo" width="300px">
